--- a/.env.example
+++ b/.env.example
@@ -43,5 +43,10 @@ OPENAI_LIKE_API_KEY=
 # You only need this environment variable set if you want to use Mistral models
 MISTRAL_API_KEY=
 
+# Get your Cerebras API Key by following these instructions -
+# https://github.com/Cerebras/inference-examples/blob/main/getting-started/README.md
+# You only need this environment variable set if you want to use Cerebras models
+CEREBRAS_API_KEY=
+
 # Include this environment variable if you want more logging for debugging locally
 VITE_LOG_LEVEL=debug
