--- a/.env.example
+++ b/.env.example
@@ -48,5 +48,9 @@ MISTRAL_API_KEY=
 # You only need this environment variable set if you want to use Cerebras models
 CEREBRAS_API_KEY=
 
+AWS_ACCESS_KEY_ID=YOUR_ACCESS_KEY_ID
+AWS_SECRET_ACCESS_KEY=YOUR_SECRET_ACCESS_KEY
+AWS_REGION=YOUR_REGION
+
 # Include this environment variable if you want more logging for debugging locally
 VITE_LOG_LEVEL=debug
