--- a/package.json
+++ b/package.json
@@ -22,10 +22,11 @@
     "node": ">=18.18.0"
   },
   "dependencies": {
+    "@ai-sdk/amazon-bedrock": "^0.0.33",
     "@ai-sdk/anthropic": "^0.0.39",
     "@ai-sdk/google": "^0.0.52",
-    "@ai-sdk/openai": "^0.0.66",
     "@ai-sdk/mistral": "^0.0.43",
+    "@ai-sdk/openai": "^0.0.66",
     "@codemirror/autocomplete": "^6.17.0",
     "@codemirror/commands": "^6.6.0",
     "@codemirror/lang-cpp": "^6.0.2",
@@ -62,6 +63,7 @@
     "ai": "^3.4.9",
     "date-fns": "^3.6.0",
     "diff": "^5.2.0",
+    "dotenv": "^16.4.5",
     "file-saver": "^2.0.5",
     "framer-motion": "^11.2.12",
     "isbot": "^4.1.0",
