--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@nanostores/react": "^0.7.2",
     "@octokit/rest": "^21.0.2",
     "@octokit/types": "^13.6.1",
+    "@dotenv/config": "^1.0.0",
     "@openrouter/ai-sdk-provider": "^0.0.5",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
