Added Nvidia Models

--- a/.env.example
+++ b/.env.example
@@ -54,5 +54,10 @@ LMSTUDIO_API_BASE_URL=
 # You only need this environment variable set if you want to use xAI models
 XAI_API_KEY=
 
+#Get your Nvidia APIkey
+#https://build.nvidia.com/
+# You only need this environment variable set if you want to use Nvidia models
+NVIDIA_API_KEY=
+
 # Include this environment variable if you want more logging for debugging locally
 VITE_LOG_LEVEL=debug
